--- a/index.html
+++ b/index.html
@@ -5,19 +5,20 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="images/logoazul.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/3cd6bd8f4f.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Andres Proyect</title>
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-md navbar-dark fixed-top ">
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top">
             <div class="container-fluid">
                 <a class="navbar-brand logo" href="#"><img src="./images/logospot.png" width="120x100" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -53,14 +54,14 @@
                 <div class="col-xxl-10 col-md-7 col-sm-12">
                     <div class="card-body">
                         <h5 class="card-title animated fadeInLeft" style="animation-delay: 1s">Bienvenidos a Sweet Spot!</h5>
-                        <p class="card-text" style="animation-delay: 2s">¡Hola! Después de un tiempo planteándome la posibilidad de crear un blog,
+                        <p class="card-text animated fadeInLeft" style="animation-delay: 2s">¡Hola! Después de un tiempo planteándome la posibilidad de crear un blog,
                             por fin me anime y acá estamos.
                             El objetivo fundamental del blog, como su nombre lo indica #SweetSpot (punto justo), es ser
                             la interfaz donde se concreten y conecten diversos intereses de la sociedad abordados por
                             diferentes puntos de vista. Es decir, con una visión “lo más plural posible”, intentando
                             llegar a un consenso, o por lo menos, a un debate de diferentes actores de la sociedad sobre
                             diferentes temas.</p>
-                            <p class="card-text" id="verMas">Debido al eficiente trabajo del #laprogramacionselectiva, cada vez más leemos, escuchamos
+                            <p class="card-text" id="verMas" >Debido al eficiente trabajo del #laprogramacionselectiva, cada vez más leemos, escuchamos
                             posiciones (generalmente parecidas a la nuestra) y estamos actualizados de los temas de
                             nuestro interés. Solo los de nuestro interés, obviando otras miradas y perdiéndonos de
                             hechos o debates interesantes e importantes que pasan bajo nuestro radar.
@@ -70,7 +71,10 @@
                             de la sociedad. Intentaremos llegar a una síntesis que al menos haga que todos sepamos que
                             piensa el otro y, con esa premisa, tratemos de construir puentes para un mejor futuro.
                             ¡Los invito a esta aventura!</p>
-                            <a href="#" class="btn btn-dark justify-content-center">Ver más</a>
+                            <div class="btnTexto animated fadeInUpBig" style="animation-delay: 3.5s">
+                                <a href="#" class="btn btn-dark justify-content-center" id="btn-ver">Ver Más</a>
+                                <a href="#" class="btn btn-dark justify-content-center" id="btn-menos">Ver Menos</a>
+                            </div>
                     </div>
                 </div>
                 <div class="col-xxl-2 col-md-5 col-sm-12">
@@ -202,9 +206,11 @@
             <p>&copy; 2021 Andy Rojas. All rights reserved.</p>
         </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+        <script src="js/wow.min.js"></script>
         <script src="js/main.js"></script>
 </body>
 
